--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Api de prueba",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server/index.js --exec babel-node",
-    "build": "babel src/ --out-dir dist",
-    "start": "node dist/server/index.js"
+    "dev": "cross-env NODE_ENV=dev nodemon src/server/index.js --exec babel-node",
+    "build": "babel src/ --out-dir dist && cp -R ./src/keys ./dist/keys/",
+    "start": "cross-env NODE_ENV=prod node dist/server/index.js"
   },
   "keywords": [],
   "author": "Nikolas Panebianco",
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
@@ -24,9 +25,11 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
+    "@babel/core": "^7.13.16",
     "@babel/node": "^7.13.12",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.12",
+    "babel-core": "^7.0.0-bridge.0",
     "faker": "^5.5.3",
     "nodemon": "^2.0.7"
   }
