--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev nodemon src/server/index.js --exec babel-node",
     "build": "babel src/ --out-dir dist && cp -R ./src/keys ./dist/keys/",
-    "start": "cross-env NODE_ENV=prod node dist/server/index.js"
+    "start": "cross-env NODE_ENV=prod node dist/server/index.js", 
+    "test": "cross-env NODE_ENV=test jest --verbose  --detectOpenHandles",
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "Nikolas Panebianco",
@@ -31,6 +33,8 @@
     "@babel/preset-env": "^7.13.12",
     "babel-core": "^7.0.0-bridge.0",
     "faker": "^5.5.3",
-    "nodemon": "^2.0.7"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
